<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">BuKa\nAMANAH</string>
    <string name="transaksi">Transaksi</string>
    <string name="utang">Hutang Piutang</string>
    <string name="stok">Stok</string>

    <string name="label">BuKa AMANAH</string>
    <string name="desc_label">Aplikasi Pencatatan Keuangan <br />Distributor Amanah</string>
    <string name="signup_label">Buat akun BuKa AMANAH dan nikmati pencatatan keuangan Anda</string>

    <!-- Text Slide -->
    <string name="slide1">Catat <b>transaksi keuangan</b> <br />Anda lebih mudah</string>
    <string name="slide2">Semua data Anda terjamin <b>aman <br />dan terjaga kerahasian</b></string>
    <string name="slide3">Report transaksi lebih <b>gampang <br />terbaca</b> dengan dilengkapi chart</string>
    <string name="slide4">Lebih <b>produktif</b> karena tinggal <br />install aplikasi BuKa AMANAH</string>

    <!-- Button Slide -->
    <string name="login">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="next">Lanjut</string>
    <string name="tgl">Hari, Tanggal</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="penerimaan">Penerimaan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="jumlah_penerimaan">Jumlah</string>
    <string name="harga">Harga</string>
    <string name="simpan">Simpan</string>

    <string name="signup_username_hint">Username</string>
    <string name="signup_nama_lengkap_hint">Nama Lengkap</string>
    <string name="no_ktp_hint">Nomor KTP</string>
    <string name="no_telp_hint">Nomor Telepon</string>
    <string name="signup_kata_sandi_hint">Kata Sandi</string>
    <string name="signup_no_wa_hint">No. Handphone / WA</string>
    <string name="signup_distributor_cabang_hint">Distributor Cabang</string>
    <string name="signup_alamat_hint">Alamat Rumah</string>
    <string name="login_username_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="old_password_hint">Kata sandi lama</string>
    <string name="new_password_hint">Kata sandi baru</string>
    <string name="re_new_password_hint">Ulangi kata sandi baru</string>
    <string name="login_signup_hint">Belum punya akun ? <b>Daftar disini</b></string>
    <string name="signup_login_hint">Sudah punya akun ? <b>Masuk</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Table view -->
    <string name="scroll_to_column_position">Scroll to 15. column position</string>
    <string name="scroll_to_row_position">Scroll to 5. row position</string>
    <string name="show_hide_the_column">Showing / Hiding 1. column</string>
    <string name="table_pagination_details">%s dari %s data</string>

    <string-array name="items_per_page">
        <item>15</item>
    </string-array>

    <string-array name="items_page">
        <item>20</item>
    </string-array>

    <string-array name="profile_menu">
        <item>Ubah Profil</item>
        <item>Ganti Kata Sandi</item>
        <item>Logout</item>
    </string-array>


    <!-- HIT API -->
    <string name="host_auth">http://bukukas-api.herokuapp.com/authenticate</string>
    <string name="host_register">http://bukukas-api.herokuapp.com/api/register</string>

    <string name="host_profile">http://bukukas-api.herokuapp.com/api/profile/get</string>
    <string name="host_update_profile">http://bukukas-api.herokuapp.com/api/profile/update</string>
    <string name="host_update_password">http://bukukas-api.herokuapp.com/api/password/update</string>
    <string name="host_update_picture_profile">http://bukukas-api.herokuapp.com/api/profile/picture/update</string>

    <string name="host_add_customer">http://bukukas-api.herokuapp.com/api/customers/add</string>
    <string name="host_get_customer">http://bukukas-api.herokuapp.com/api/customers/get</string>
    <string name="host_update_customer">http://bukukas-api.herokuapp.com/api/customers/update</string>
    <string name="host_delete_customer">http://bukukas-api.herokuapp.com/api/customers/delete</string>
    <string name="host_get_detail_customer">http://bukukas-api.herokuapp.com/api/customers/detail</string>
    <string name="host_get_customer_list">http://bukukas-api.herokuapp.com/api/customers/getCustList</string>

    <string name="host_income">http://bukukas-api.herokuapp.com/api/receipts/add</string>
    <string name="host_get_receipt">http://bukukas-api.herokuapp.com/api/receipts/get</string>
    <string name="host_delete_receipt">http://bukukas-api.herokuapp.com/api/receipts/delete</string>
    <string name="host_update_receipt">http://bukukas-api.herokuapp.com/api/receipts/update</string>
    <string name="host_receipt_detail">http://bukukas-api.herokuapp.com/api/receipts/detail</string>
    <string name="host_get_receipt_list">http://bukukas-api.herokuapp.com/api/receipts/getOptions</string>
    <string name="host_receipt_summary">http://bukukas-api.herokuapp.com/api/receipts/getSummary</string>

    <string name="host_disbursement">http://bukukas-api.herokuapp.com/api/disbursements/add</string>
    <string name="host_get_disbursement">http://bukukas-api.herokuapp.com/api/disbursements/get</string>
    <string name="host_delete_disbursement">http://bukukas-api.herokuapp.com/api/disbursements/delete</string>
    <string name="host_update_disbursement">http://bukukas-api.herokuapp.com/api/disbursements/update</string>
    <string name="host_disbursement_detail">http://bukukas-api.herokuapp.com/api/disbursements/detail</string>
    <string name="host_get_detail_disbursement_list">http://bukukas-api.herokuapp.com/api/disbursements/getOptions</string>
    <string name="host_get_disbursement_list">http://bukukas-api.herokuapp.com/api/disbursements/getTypes</string>

    <string name="host_add_stock">http://bukukas-api.herokuapp.com/api/stocks/add</string>
    <string name="host_get_stock">http://bukukas-api.herokuapp.com/api/stocks/get</string>
    <string name="host_update_stock">http://bukukas-api.herokuapp.com/api/stocks/update</string>
    <string name="host_stock_detail">http://bukukas-api.herokuapp.com/api/stocks/detail</string>
    <string name="host_get_stock_list">http://bukukas-api.herokuapp.com/api/stocks/getProductList</string>

    <string name="host_debt_bussiness_add">http://bukukas-api.herokuapp.com/api/debts/business/add</string>
    <string name="host_debt_bussiness_get">http://bukukas-api.herokuapp.com/api/debts/business/get</string>
    <string name="host_debt_bussiness_delete">http://bukukas-api.herokuapp.com/api/debts/business/delete</string>
    <string name="host_debt_bussiness_update">http://bukukas-api.herokuapp.com/api/debts/business/update</string>
    <string name="host_debt_bussiness_detail">http://bukukas-api.herokuapp.com/api/debts/business/detail</string>

    <string name="host_debt_gallon_add">http://bukukas-api.herokuapp.com/api/debts/gallon/add</string>
    <string name="host_debt_gallon_update">http://bukukas-api.herokuapp.com/api/debts/gallon/update</string>
    <string name="host_debt_gallon_detail">http://bukukas-api.herokuapp.com/api/debts/gallon/detail</string>

    <string name="host_credit_gallon_add">http://bukukas-api.herokuapp.com/api/credits/gallon/add</string>
    <string name="host_credit_gallon_update">http://bukukas-api.herokuapp.com/api/credits/gallon/update</string>
    <string name="host_credit_gallon_detail">http://bukukas-api.herokuapp.com/api/credits/gallon/detail</string>

    <string name="host_credit_bussiness_add">http://bukukas-api.herokuapp.com/api/credits/business/add</string>

    <string name="host_get_branch_list">http://bukukas-api.herokuapp.com/api/get/branches</string>
    <string name="host_get_kecamatan_list">http://bukukas-api.herokuapp.com/api/get/districts?branch</string>
</resources>