<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarTheme"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/main_color" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/linearParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/cell_height">

                <TextView
                    style="@style/modifiedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/signup_label"
                    android:textColor="@color/black" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputNamaLengkap"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:focusable="true">

                    <EditText
                        android:id="@+id/editTextNamaLengkap"
                        style="@style/modifiedEditText"
                        android:hint="@string/signup_nama_lengkap_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/modifiedEditText"
                        android:hint="@string/signup_kata_sandi_hint"
                        android:inputType="numberPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputTelepon"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:focusable="true">

                    <EditText
                        android:id="@+id/editTextTelepon"
                        style="@style/modifiedEditText"
                        android:hint="@string/signup_no_wa_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUsername"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:focusable="true">

                    <EditText
                        android:id="@+id/editTextEmail"
                        style="@style/modifiedEditText"
                        android:hint="@string/login_username_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textDistributor"
                    style="@style/parentDD"
                    android:layout_marginTop="20dp"
                    android:theme="@style/Theme3">

                    <AutoCompleteTextView
                        android:id="@+id/actCabang"
                        style="@style/modifiedEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_distributor_cabang_hint"
                        android:inputType="none"
                        android:maxLines="1"
                        android:theme="@style/Theme3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textKecamatan"
                    style="@style/parentDD"
                    android:layout_marginTop="20dp"
                    android:theme="@style/Theme3">

                    <AutoCompleteTextView
                        android:id="@+id/actKecamatan"
                        style="@style/modifiedEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/signup_distributor_cabang_hint"
                        android:inputType="none"
                        android:maxLines="1"
                        android:theme="@style/Theme3" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_signup"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="register"
                    android:text="@string/signup" />

                <TextView
                    style="@style/modifiedEditText"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="userLogin"
                    android:text="@string/signup_login_hint"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>