<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.users.profile.ChangePassword">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarThemeProfile"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/app_shape"
            app:titleTextAppearance="@style/Toolbar.ProfileTitleText"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputOldPassword"
            style="@style/parent"
            android:layout_marginHorizontal="@dimen/loginViewsMargin"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/editTextOldPassword"
                style="@style/modifiedEditTextForm"
                android:hint="@string/login_password_hint"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNewPassword"
            style="@style/parent"
            android:layout_marginHorizontal="@dimen/loginViewsMargin"
            android:layout_marginVertical="10dp"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/editTextNewPassword"
                style="@style/modifiedEditTextForm"
                android:hint="@string/new_password_hint"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputReNewPassword"
            style="@style/parent"
            android:layout_marginHorizontal="@dimen/loginViewsMargin"
            android:layout_marginVertical="10dp"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <EditText
                android:id="@+id/editTextReNewPassword"
                style="@style/modifiedEditTextForm"
                android:hint="@string/re_new_password_hint"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/loginViewsMargin"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="updatePassword"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:text="@string/simpan" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>