<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".users.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppBarTheme"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextAppearance="@style/Toolbar.TitleText"
                app:titleTextColor="@color/main_color" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                style="@style/linearParent"
                android:layout_gravity="center"
                android:padding="@dimen/loginViewsMargin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputUsername"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:focusable="true">

                    <EditText
                        android:id="@+id/editTextUsername"
                        style="@style/modifiedEditTextForm"
                        android:hint="@string/login_username_hint"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/editTextPassword"
                        style="@style/modifiedEditTextForm"
                        android:hint="@string/login_password_hint"
                        android:inputType="numberPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="forgotPassword"
                    android:text="Lupa Password?"
                    android:textColor="@color/teal_700"
                    android:textSize="@dimen/newsMoreTextSize" />

                <Button
                    android:id="@+id/btn_login"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="login"
                    android:text="@string/login" />

                <TextView
                    style="@style/modifiedEditText"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:onClick="userRegistration"
                    android:text="@string/login_signup_hint"
                    android:textAlignment="center"
                    android:textColor="@color/teal_700" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>